--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@
         margin-right: 3rem;
     }
     
-    .logo {
+    .logo img{
         width: 2rem;
         height: 2rem;
         top: 2%;
