--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@
     
     section.freelancer {
         text-align: center;
-        background: linear-gradient(rgba(0, 0, 0, 0.88), rgba(0, 0, 0, 0.88)), url(/IMAGES/back.jpg);
+        background: linear-gradient(rgba(0, 0, 0, 0.88), rgba(0, 0, 0, 0.88)), url(IMAGES/back.jpg);
         color: var(--white);
         clip-path: polygon(0 0, 100% 0, 100% 100%, 70% 80%, 0 100%);
         padding-bottom: 10rem;
